fixes layout bugs

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,27 @@
 /* css file is linked to html */
-* {
-    box-sizing: border-box;
-  }
+
 
 .questions-container {
-	border: 3px solid green;
-    height: 400px;
+	border: 3px solid black;
+    height: 300px;
     width: 600px;
     
 }
 
 .row {
-    border: 2px solid red;
+    /* border: 2px solid red; */
     height: 20%;
     display: flex;
 }
 
 .column {
-    border: 1px solid blue;
+    border: 2px solid black;
+    background-color: #060CE9;
+    color: #FFD700;
     width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
 }
 
